src/test/deca/context/invalid/RedefineAfieldAsMethod.deca
// Description:
//    redefine a field as a method ;
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023






class A {
	int b;
}
class B extends A {
	void b(){}
}
